Archive2/01/ab47f71de35bbe/output
main.cpp: In function 'int main()':
main.cpp:9:8: error: invalid initialization of reference of type 'const tuple<int, Values>&' from expression of type 'tuple<int, float>'
     f(t);
        ^
main.cpp:5:6: error: in passing argument 1 of 'void f(const tuple<Values ...>&) [with Values = {int, Values}]'
 void f(tuple<Values...> const& rhs) {}
      ^
